--- a/app/src/main/res/layout/activity_uncertainty.xml
+++ b/app/src/main/res/layout/activity_uncertainty.xml
@@ -17,8 +17,8 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="22"
-            android:textSize="18dp"
+            android:layout_weight="15"
+            android:textSize="18sp"
             android:text="请输入△B:\n(已知或量程的一半)"
             android:gravity="center" />
 
@@ -29,6 +29,11 @@
             android:layout_weight="9"
             android:gravity="center"
             android:inputType="numberDecimal" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6" />
     </LinearLayout>
 
     <LinearLayout
@@ -41,7 +46,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="15"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:text="请输入测量次数n:"
             android:gravity="center" />
 
@@ -59,7 +64,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="6"
             android:text="确认"
-            android:background="@drawable/border2"
             android:gravity="center" />
     </LinearLayout>
 
