--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
@@ -39,14 +40,14 @@
         android:id="@+id/instruction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textIsSelectable="true"
+        android:textSize="16sp"
         android:text="
         1.“数据处理”能够根据传入的一组待计算的数据，返回其标准偏差、不确定度等等。\n
         2.“最小二乘”能够根据传入的两组对应的数据，返回最小二乘法中的相关数据\n
         3.此软件仅能进行最终的计算，前期的计算还需要同学们自己计算\n
         4.遇到需要画图的题，结合Excel使用即可\n
-        5.若有意向学习或升级此App，GitHub如下:\n
-        https://github.com/zzbaw130/LabAssistant
+        5.若有意向学习或升级此App，GitHub如下:https://github.com/zzbaw130/LabAssistant
         "
         android:visibility="invisible"/>
     <LinearLayout
@@ -54,12 +55,14 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:textAlignment="textEnd"
             android:textSize="16sp"
             android:text="\@Class:Computer1904\n\@Author:Triple Dirt"
             android:layout_marginBottom="5dp"
-            android:layout_marginLeft="5dp"/>
+            android:layout_marginLeft="5dp"
+            tools:ignore="RtlCompat" />
     </LinearLayout>
 </LinearLayout>
